k8s/gateway-tls.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: nsemployee
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        # These are coming from the istio-ingressgateway-certs secret
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsemployee
  namespace: nsemployee
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
    - match:
        - uri:
            prefix: /app
      route:
        - destination:
            port:
              number: 8080
            host: semployee.nsemployee.svc.cluster.local
