k8s/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: employee-gateway
  namespace: nsemployee
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsemployee
  namespace: nsemployee
spec:
  hosts:
  - "*"
  gateways:
  - employee-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: semployee.nsemployee.svc.cluster.local
