k8s/virtual-service-ab-testing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsemployee
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
    - match:
        - uri:
            regex: .*swagger.*
      route:
        - destination:
            host: semployee.default.svc.cluster.local
            subset: v1
    - match:
        - uri:
            regex: .*api-docs.*
      route:
        - destination:
            host: semployee.default.svc.cluster.local
            subset: v1
    - match:
        - headers:
            x-api-version:
              exact: "v1"
          uri:
            prefix: /app
          ignoreUriCase: true
      route:
        - destination:
            host: semployee.default.svc.cluster.local
            subset: v1
    - match:
        - headers:
            x-api-version:
              exact: "v2"
          uri:
            prefix: /app
          ignoreUriCase: true
      route:
        - destination:
            host: semployee.default.svc.cluster.local
            subset: v2
      mirror:
        host: semployee.default.svc.cluster.local
        subset: v3
      mirrorPercentage:
        value: 100.0
