k8s/virtual-service-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsemployee
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
    - match:
        - uri:
            prefix: /app
      route:
        - destination:
            host: semployee.default.svc.cluster.local
            subset: v2
          weight: 80
        - destination:
            host: semployee.default.svc.cluster.local
            subset: v1
          weight: 20
      mirror:
        host: semployee.default.svc.cluster.local
        subset: v3
      mirrorPercentage:
        value: 100.0
